fixed colors to work on safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@
     --muted-foreground: 215.4 16.3% 46.9%;
  
     --accent: 28 67% 44%;
-    --accent-foreground: 32, 65%, 62%;
+    --accent-foreground: 89 38% 26%;
  
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
